--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "random-words",
+  "name": "random-words-es",
   "version": "1.1.0",
-  "description": "Generate one or more common English words",
+  "description": "Generate one or more common Spanish words",
   "main": "index.js",
   "scripts": {
     "test": "mocha tests/test.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:punkave/random-words.git"
+    "url": "git@github.com:xemuj/random-words-es.git"
   },
   "keywords": [
     "random",
@@ -19,6 +19,6 @@
     "sample",
     "text"
   ],
-  "author": "Thomas Boutell",
+  "author": "Thomas Boutell/Sergio Ovalle",
   "license": "MIT"
 }
